--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "web-engineer-interview",
   "version": "0.1.0",
   "private": true,
+  "engine": {
+    "node": "^6"
+  },
   "dependencies": {
     "firebase": "^4.1.3",
     "randomstring": "^1.1.5",
